// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appsForUserTypeAndGroups doesn’t return agency apps if none is specified 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.svg",
        "mfaDeviceRequired": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/hub.svg",
        "mfaDeviceRequired": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.svg",
        "mfaDeviceRequired": false,
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps for a group 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.svg",
        "mfaDeviceRequired": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/hub.svg",
        "mfaDeviceRequired": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.svg",
        "mfaDeviceRequired": false,
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "BPL",
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Create Sponsored Account",
        "url": "https://identity.boston.gov/identityiq/createSponsor.jsf",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Unblock Website Request",
        "url": "https://boston.seamlessdocs.com/f/geol18cumhw",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps for an agency 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.svg",
        "mfaDeviceRequired": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/hub.svg",
        "mfaDeviceRequired": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.svg",
        "mfaDeviceRequired": false,
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps that require an MFA device 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.svg",
        "mfaDeviceRequired": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/hub.svg",
        "mfaDeviceRequired": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "BPL",
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Create Sponsored Account",
        "url": "https://identity.boston.gov/identityiq/createSponsor.jsf",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Unblock Website Request",
        "url": "https://boston.seamlessdocs.com/f/geol18cumhw",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-dev/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns just the "everyone" category for no groups 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.svg",
        "mfaDeviceRequired": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/hub.svg",
        "mfaDeviceRequired": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "BPL",
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Create Sponsored Account",
        "url": "https://identity.boston.gov/identityiq/createSponsor.jsf",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Unblock Website Request",
        "url": "https://boston.seamlessdocs.com/f/geol18cumhw",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;
